# vk-calls-proxy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/libraries/: api.cmake  app.cmake  common.cmake  curl.cmake  cxxopts.cmake  fmt.cmake  generated.cmake  json.cmake  psl.cmake  qt6.cmake  secret.cmake  server.cmake  spdlog.cmake  tomlplusplus.cmake  totp.cmake  utils.cmake  uuid.cmake
cmake/platform/: generic_builder.cmake  linux_builder.cmake  macos_builder.cmake  windows_builder.cmake
cmake/utils/: autoresolve_deps.cmake  build_protection.cmake  generate_resources.cmake  get_linux_kernel.cmake  get_windows_kernel.cmake  list_all_subdirectories.cmake  postbuild_scripts.cmake
cmake/utils/fun/: ansi.cmake  cmake_animations.cmake  linux_distro_ramble.cmake
cmake/utils/generation_rules/: embed_as_string.cmake
res/defaults/: settings.toml  vk_auto_call.js  vk_hook.js
res/release/linux/desktop/: app.desktop.in
src/: main.cpp
src/api/protocol/: enums.hpp  frame.hpp  serialization.hpp
src/app/application/: application.cpp  application.hpp
src/app/main_window/: main_window.cpp  main_window.hpp
src/app/ui/: browser_panel.cpp  browser_panel.hpp  call_control_panel.cpp  call_control_panel.hpp  settings_panel.cpp  settings_panel.hpp
src/app/web_hook/: custom_web_page.cpp  custom_web_page.hpp
src/common/global/: global_names.hpp
src/server/creator_server/: creator_server.cpp  creator_server.hpp
src/server/relay_server/: relay_server.cpp  relay_server.hpp
src/server/socks_session/: socks_session.cpp  socks_session.hpp
src/utils/manager_singleton/: manager_singleton.hpp
src/utils/option_manager/: option_manager.cpp  option_manager.hpp
src/utils/settings_manager/: settings_manager.cpp  settings_manager.hpp
src/utils/spdlog_wrapper/: spdlog_wrapper.hpp
test/: test_proxy.py
(+19 files in other folders)
